@@ -48,7 +48,7 @@ public class ResultSet {
 	
 	public Integer getInt(String name) {
 		Object obj = this.getObject(name);
-		return obj!=null?Core.toInt(obj.toString()): new Integer(-1);
+		return obj!=null?Core.toInt(obj.toString()): Integer.valueOf(-1);
 	}
 
 	public String getString(String name) {
@@ -58,22 +58,22 @@ public class ResultSet {
 
 	public Long getLong(String name) {
 		Object obj = this.getObject(name);
-		return obj!=null?Core.toLong(obj.toString()): new Long(-1);
+		return obj!=null?Core.toLong(obj.toString()): Long.valueOf(-1);
 	}
 
 	public Short getShort(String name) {
 		Object obj = this.getObject(name);
-		return obj!=null?Core.toShort(obj.toString()): new Short((short)-1);
+		return obj!=null?Core.toShort(obj.toString()): Short.valueOf((short)-1);
 	}
 	
 	public Double getDouble(String name) {
 		Object obj = this.getObject(name);
-		return obj!=null?Core.toDouble(obj.toString()): new Double(-1);
+		return obj!=null?Core.toDouble(obj.toString()): Double.valueOf(-1);
 	}
 
 	public Float getFloat(String name) {
 		Object obj = this.getObject(name);
-		return obj!=null?Core.toFloat(obj.toString()): new Float(-1);
+		return obj!=null?Core.toFloat(obj.toString()): Float.valueOf(-1);
 	}
 	
 	@SuppressWarnings("unchecked")
@@ -86,7 +86,8 @@ public class ResultSet {
 	
 	
 	public static class Record{
-
+			
+		//WARNINIG: Do not change (Row,RowList) in the legacy version because of apps using this like it is
 		public Tuple Row;	
 		public List<Record> RowList;
 		private String sql;
@@ -109,7 +110,7 @@ public class ResultSet {
 		
 		public Boolean getBoolean(String name) {
 			Object v = this.getObject(name);
-			return v!=null?new Boolean(""+v):new Boolean(false);
+			return v!=null?Boolean.valueOf(""+v):Boolean.valueOf(false);
 		}
 		
 		public Integer getInt(String name) {
@@ -160,7 +161,7 @@ public class ResultSet {
 		
 		public Boolean getBoolean(int index) {
 			Object v = this.getObject(index);
-			return v!=null?new Boolean(""+v):new Boolean(false);
+			return v!=null?Boolean.valueOf(""+v):Boolean.valueOf(false);
 		}
 		
 		public Integer getInt(int index) {
